--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
   "config": {
     "forge": {
       "make_targets": {
-        "win32": ["squirrel"],
-        "darwin": ["zip"],
-        "linux": ["deb", "rpm"]
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
       },
       "electronPackagerConfig": {
         "packageManager": "yarn"
@@ -44,12 +51,15 @@
     "@types/python-shell": "^0.4.1",
     "@types/react": "^0.14.55",
     "@types/react-dom": "^0.14.20",
+    "@types/react-router-dom": "^4.2.6",
     "electron-compile": "^6.4.2",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "tslib": "^1.4.0"
   },
   "devDependencies": {
