--- a/package.json
+++ b/package.json
@@ -51,15 +51,21 @@
     "@types/python-shell": "^0.4.1",
     "@types/react": "^0.14.55",
     "@types/react-dom": "^0.14.20",
-    "@types/react-router-dom": "^4.2.6",
+    "@types/redux": "^3.6.0",
     "electron-compile": "^6.4.2",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "history": "^4.7.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "tslib": "^1.4.0"
   },
   "devDependencies": {
